# FROST_Android_App

./: LICENSE
app/: build.gradle.kts
app/src/androidTest/java/cz/but/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/headers/: globals.h  setup.h  signing.h
app/src/main/cpp/src/: frost.c  globals.c  macros.c  main.c  setup.c  signing.c
app/src/main/java/cz/but/myapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cz/but/myapplication/: ExampleUnitTest.kt
gradle/: libs.versions.toml
